--- a/kanka-keybinds/package.json
+++ b/kanka-keybinds/package.json
@@ -1,10 +1,10 @@
 {
   "name": "kanka-keybinds",
-  "version": "0.7a",
+  "version": "0.8.2",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "npm version patch && webpack",
     "run": "webpack --watch"
   },
   "author": "",
