--- a/kanka-keybinds/package.json
+++ b/kanka-keybinds/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kanka-keybinds",
-  "version": "0.8.2",
+  "version": "0.8.3-0",
   "description": "",
   "main": "index.js",
   "scripts": {
