--- a/kanka-keybinds/package.json
+++ b/kanka-keybinds/package.json
@@ -4,11 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "patch": "npm version patch && webpack",
-    "build": "npm version prerelease && webpack",
     "run": "webpack --watch",
-    "version": "webpack && git add -A dist -f && git add -A package*.json",
-    "postversion": "git commit -m \"Push build\" && git push --force-with-lease && git push --tags"
+    "build": "webpack bundle",
+    "version": "npm run build && git add -A dist -f && git add -A package*.json",
+    
+    "prerelease": "npm version prerelease",
+    "patch": "npm version patch",
+    "minor": "npm version minor",
+    "major": "npm version major",
+
+    "push": "git add . && git commit -m \"Push build\" && git push --force-with-lease && git push --tags",
+    "deploy": "git checkout dev && npm run push",
+    "publish": "git checkout master && npm run push",
+
+    "noop": "echo \"No operation\""
   },
   "author": "",
   "license": "MIT",
