--- a/kanka-keybinds/package.json
+++ b/kanka-keybinds/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kanka-keybinds",
-    "version": "0.9.4",
+    "version": "0.9.5-0",
     "displayName": "Kanka Keybinds",
     "description": "Set your own keyboard shortcuts for entity view page on Kanka.",
     "icon": "https://www.google.com/s2/favicons?domain=kanka.io",
@@ -35,14 +35,12 @@
         "checkout:dev": "git checkout dev",
         "checkout:master": "git checkout master",
         "git:pack": "git add -A dist -f && git add -A package*.json",
-        "git:commit": "git add ../ && git commit -m \"Push %npm_package_version% build\"",
+        "git:commit": "git add . && git commit -m \"Push %npm_package_version% build\"",
         "git:push": "git push --force-with-lease && git push --tags",
-        "git:squash-dev": "git merge dev --squash --strategy-option=theirs",
-        "git:squash-master": "git merge master --squash --strategy-option=theirs",
-        "squash:dev-to-master": "npm-run-all checkout:master git:squash-dev git:commit",
-        "sync:dev-with-master": "npm-run-all checkout:dev git:squash-master",
-        "dev-workflow": "cls && npm-run-all --print-label checkout:dev git:pack ver:prerelease git:push",
-        "prod-workflow": "cls && npm-run-all --print-label squash:dev-to-master ver:%VER% git:push sync:dev-with-master",
+        "git:rebase-dev": "git checkout dev && git rebase master",
+        "git:merge-dev": "git checkout master && git merge dev",
+        "dev-workflow": "npm-run-all --print-label checkout:dev git:pack ver:prerelease git:push",
+        "prod-workflow": "npm-run-all --print-label checkout:dev git:merge-dev checkout:master ver:%VER% git:push",
         "noop": "echo \"No operation %npm_package_version%\""
     },
     "author": "InfiniteGeek",
