--- a/kanka-keybinds/package.json
+++ b/kanka-keybinds/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kanka-keybinds",
-    "version": "0.9.5-2",
+    "version": "0.9.5-3",
     "displayName": "Kanka Keybinds",
     "description": "Set your own keyboard shortcuts for entity view page on Kanka.",
     "icon": "https://www.google.com/s2/favicons?domain=kanka.io",
@@ -27,10 +27,10 @@
         "run": "webpack --watch",
         "build": "webpack bundle",
         "//ver": "echo 'sequence: `preversion` `ver:xxx` `version`'",
-        "ver:prerelease": "npm --force version prerelease",
-        "ver:patch": "npm --force version patch",
-        "ver:minor": "npm --force version minor",
-        "ver:major": "npm --force version major",
+        "ver:prerelease": "npm version prerelease",
+        "ver:patch": "npm version patch",
+        "ver:minor": "npm version minor",
+        "ver:major": "npm version major",
         "version": "npm-run-all build git:commit",
         "checkout:dev": "git checkout dev",
         "checkout:master": "git checkout master",
