--- a/kanka-at-helper/package.json
+++ b/kanka-at-helper/package.json
@@ -17,6 +17,7 @@
     "@types/jquery": "^3.5.29",
     "@types/mousetrap": "^1.6.15",
     "@types/select2": "^4.0.63",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "^9.5.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
